--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,40 @@
 /err
 /std
 /target/
+
+**/.checkstyle
+**/.classpath
+**/.pmd
+**/.project
+**/.ruleset
+**/.settings
+**/.tomcatplugin
+**/work
+**/target/
+**/.svn
+**/.apt_generated
+
+database-diff-changelog.xml
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
